# management-tools-analysis-dashboard

./: .dockerignore  .env.example  .gitignore  30_COMBINATION_GENERATION_COMPLETE.md  AGENTS.md  AGENTS.md 2.bak  API_KEY_IMPLEMENTATION_RESULTS.md  API_KEY_IMPLEMENTATION_RESULTS.md 2.bak  BOLD_FORMATTING_COMPLETE_FIX.md  BOLD_FORMATTING_FIXED 3.md  CALIDAD_TOTAL_TEST_SUMMARY.md.bak  CLAUDE.md  COMPLETE_MODAL_SUCCESS.md  DASHBOARD_COMPLETE_SUCCESS.md  DATABASE_DESIGN_COMPLETE.md  DATABASE_FIRST_IMPLEMENTATION.md 2.bak  Dockerfile  FINAL_SESSION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md 2.bak  GEMINI.md  GEMINI.md 2.bak  IMPLEMENTATION_PLAN.md  KEY_FINDINGS_ARCHITECTURE.md  KEY_FINDINGS_IMPROVEMENTS.md  KEY_FINDINGS_TROUBLESHOOTING.md 2.bak  MODAL_BOLD_FORMATTING_FIX 3.md  MODAL_FORMATTING_FINAL_FIX.md  MODAL_FORMATTING_FINAL_SUCCESS.md  MULTI_SOURCE_MODAL_FIX_COMPLETE.md  NEW_DATABASE_SCHEMA.sql  PCA_HEATMAP_SWAP_COMPLETE.md  PROMPT_ALIGNMENT_ANALYSIS.md  README.md  README.md.bak  SECTION_ORDER_UPDATE 3.md  SECTION_REQUIREMENTS.md.bak  SINGLE_SOURCE_SUCCESS.md 2.bak  SINGLE_SOURCE_TEST_RESULTS.md 2.bak  SOLUTION_SUMMARY.md  add_missing_columns.sql  (+263 more)
dashboard_app/: .dockerignore  30_combination_generation_results_20251212_003348.json  DOCKER_DEPLOYMENT.md  Dockerfile  TEST_INSTRUCTIONS.md 3.bak  app.py  app.py 3.bak  app_old.py  batch_processor.py  calidad_total_5sources_real_ai_20251204_232521.json  comprehensive_final_test.py 3.bak  comprehensive_key_findings_test.py 3.bak  debug_content_structure 2.py  direct_ai_test_20251212_004400.json  final_confirmation.py 2.bak  (+49 more)
(+1520 files in other folders)
